Servicio de clima (CORE+UI). Faltan strings en strings.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MailingService">
-        <activity android:name=".ui.MailServiceActivity">
+        <activity android:name=".ui.WeatherServiceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
