--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="org.uvigo.esei.unio">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
 
@@ -26,31 +27,31 @@
                 android:value=".ui.MainActivity"/>
         </activity>
 
-        <activity android:name=".ui.TranslationServiceActivity">
+        <activity android:name=".ui.services.TranslationServiceActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity"/>
         </activity>
 
-        <activity android:name=".ui.WeatherServiceActivity">
+        <activity android:name=".ui.services.WeatherServiceActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity"/>
         </activity>
 
-        <activity android:name=".ui.MailServiceActivity">
+        <activity android:name=".ui.services.MailServiceActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity"/>
         </activity>
 
-        <activity android:name=".ui.NotesServiceActivity">
+        <activity android:name=".ui.services.NotesServiceActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity"/>
         </activity>
 
-        <activity android:name=".ui.CalculatorServiceActivity">
+        <activity android:name=".ui.services.CalculatorServiceActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity"/>
